--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "serialize-javascript": ">=2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
